# sgevol

./: CMakeLists.txt  create_cube.cpp  create_cube.hpp  create_shader.cpp  create_shader.hpp  locked_value.hpp  main.cpp  media_path.cpp  media_path.hpp  perlin2d.cpp  perlin2d.hpp  perlin3d.cpp  perlin3d.hpp  polar_clouds.sh  simplex2d.cpp  simplex2d.hpp  simplex3d.cpp  simplex3d.hpp  simplex_noise.hpp  simplexzeugs.nb  test.cpp  test.hpp  texture3d.cpp  texture3d.hpp  to_ppm.hpp  trig_lerp.hpp  vf.hpp
CMakeModules/: FindSGE.cmake
mathematica/: falloff.nb  simplexzeugs2.nb
media/: LICENSE  config.json
media/shaders/: fragment.glsl  vertex.glsl
media/shaders/fragment/: bounding_tests.glsl  clouds.glsl  fragment.glsl  global.glsl  global_sphere.glsl  local.glsl  local_sphere.glsl  noise.glsl  phase.glsl  polar.glsl  procedural.glsl  shadowmap.glsl  simple.glsl  simplex_noise.glsl  stars.glsl  test.glsl  tex_plain.glsl  trivial.glsl  trivial_polar.glsl  trivial_sphere.glsl
media/shaders/vertex/: globe.glsl  stars.glsl  tex_plain.glsl
src/: .texture3d.cpp.swp  config_wrapper.cpp  config_wrapper.hpp  create_cube.cpp  create_cube.hpp  create_shader.cpp  main.cpp  name.cpp  name.hpp  shadow_volume.cpp  shadow_volume.hpp  simplex2d.cpp  test.hpp  texture3d.cpp  texture3d.hpp  to_ppm.hpp  vf.hpp
src/json/: array_to_vector.hpp  convert.hpp  find_member.hpp  is_null.cpp  is_null.hpp  member_has_type.hpp  merge_trees.cpp  merge_trees.hpp  parse_color.hpp  parse_random_inclusive_range.hpp  parse_rgba8_color.cpp  process_option.cpp  process_option.hpp  string_to_value.cpp  string_to_value.hpp
src/sgevol/: .main.cpp.swp  cloud_data_to_png.cpp  compiled_model.cpp  compiled_model.hpp  create_phase_function.cpp  create_shader.cpp  cubetest.cpp  main.cpp  media_path.cpp  name.cpp  noise_volume.cpp  noise_volume.hpp  objviewer.cpp  perlin3d.cpp  planar_noise.cpp  shadow_volume.cpp  shadow_volume.hpp  simplex_noise.hpp  texture3d.cpp  texture3d.hpp  vf.hpp  zip_with.hpp
src/sgevol/cloud_sphere/: model_format.hpp  object.cpp  object.hpp  vf.hpp
src/sgevol/cube/: .object.cpp.swp  .object.hpp.swp  object.cpp  object.hpp  vf.hpp
src/sgevol/json/: parse_rgba8_color.cpp  parse_rgba8_color.hpp
src/sgevol/model/: object.cpp  object.hpp  vertex_format.hpp  vf.hpp
src/sgevol/stars/: object.cpp  object.hpp  vf.hpp
src/sgevollib/: create_cube.cpp  create_cube.hpp  locked_value.hpp  media_path.cpp  media_path.hpp  noise_volume.cpp  noise_volume.hpp  perlin2d.cpp  perlin2d.hpp  perlin3d.cpp  perlin3d.hpp  shadow_volume.cpp  shadow_volume.hpp  simplex2d.cpp  simplex2d.hpp  simplex3d.cpp  simplex3d.hpp  simplex_noise.hpp  texture3d.cpp  texture3d.hpp  to_ppm.hpp  vf.hpp  zip_with.hpp
src/sgevollib/cloud_sphere/: model_format.hpp  object.cpp  object.hpp  vf.hpp
src/sgevollib/cube/: object.cpp  object.hpp  vf.hpp
src/sgevollib/json/: parse_color.hpp  parse_rgba8_color.cpp  parse_rgba8_color.hpp
src/sgevollib/model/: object.cpp  object.hpp  vertex_format.hpp  vf.hpp
src/sgevollib/stars/: object.cpp  object.hpp  vf.hpp
util/: prettify_includes.sh  update_cmake.sh
